# alternative-effects-api

./: README.txt  dune-project
src/: dune  effect.ml  effect.mli
test/: dune
